# call_reducer

./: .gitignore  README.md  SolidityListener.py  contracts_deletion.py  cproperty.sh  dd_final.py  dd_temp.py  down_top_bfs.py  example.c  ext_changed.sol  hdd_final.py  inherit.py  initial_example.c  main.py  nodes.txt  prop.sh  pyproject.toml  reduce_analysis.sh  result.csv  run_benchmarks.sh  top_down_bfs.py  universal.py  unused_var.py
Solidity/: .~lock.greduce_results.csv#  .~lock.results.csv#  greduce_results.csv  new_plots.py  plots.py  recent.sh  results.csv  tokens.py
Solidity/smart1/: after_dd_contract.sol  after_down_top_bfs.py_ext_changed.sol  after_hdd_top_down.py_ext_changed.sol  after_top_down_bfs.py_ext_changed.sol  before_initial_ext_changed.sol  ext_changed.sol  ext_changed.sol.20240709_212202_00.orig  ext_functions.sol  initial_ext_changed.sol  property  reduced.sol  reduction_results  results.csv  smart1.sol  solidity.sh  solidity2.sh
Solidity/smart10/: after_down_top_bfs.py_ext_changed.sol  after_hdd_top_down.py_ext_changed.sol  after_top_down_bfs.py_ext_changed.sol  before_initial_ext_changed.sol  ext_changed.sol.20240709_163127_00.orig  property  results.csv  solidity.sh
Solidity/smart11/: after_dd_contract.sol  after_dd_contract_fixed.sol  after_dd_final.py_ext_changed.sol  before_initial_ext_changed.sol  (+10 more)
antlr-ast-demo/: ast_c_demo.py  ast_solidity_demo.py
legacy/: hdd_final.py  hdd_top_down.py  nodes.py  run_store.py  var_mod_ANTLR.py
reducer/: checker.py  dd.py  graph.py  modifications.py  utils.py
treesitter/: modify.py  tree.py
(+996 files in other folders)
